# CLerning

./: CMakeLists.txt  main.c  vector2.c  vector2.h
collection/: iterator.h  linq.h  list.c  list.h  loop_list.c  loop_list.h  nodes.h
collection/vector/: vector.c  vector.h
utilities/: delegate.h  garbage_collector.h
